--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch": "cra-build-watch",
-    "heroku-postbuild": "npm run build"
+    "watch": "cra-build-watch"
   },
   "eslintConfig": {
     "extends": "react-app"
